--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,22 @@
 .App {
   text-align: center;
-  font-family: "Acme", sans-serif;
+  /* font-family: "Acme", sans-serif; */
+  /* font-family: "Carter One", cursive; */
+  /* font-family: "Bungee Inline", cursive; */
+  font-family: "Vast Shadow", cursive;
   /* font-family: "Montserrat", sans-serif; */
+  /* height: 100%; */
+  /* background-image: url(/images/tomato.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-origin: content-box; */
 }
+
+/* .image {
+  display: flex;
+  margin: 0 auto;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+} */
