--- a/src/components/Ingredients/Ingredients.css
+++ b/src/components/Ingredients/Ingredients.css
@@ -1,2 +1,13 @@
 .Ingredients {
 }
+
+.ingredient-title {
+  text-align: left;
+  margin-left: 200px;
+  text-decoration: underline;
+}
+
+.Ingredients p {
+  text-align: left;
+  margin-left: 200px;
+}
