--- a/src/components/Suggestion/Suggestion.css
+++ b/src/components/Suggestion/Suggestion.css
@@ -4,8 +4,19 @@
 
 .suggestion-title {
   text-align: left;
-  margin-left: 200px;
+  margin-left: 100px;
   text-decoration: underline;
+  /* border-left: 5px solid white; */
+  color: #bf0000;
+}
+.suggestion-title:hover {
+  color: white;
+  text-decoration: none;
+}
+
+.Suggestion p {
+  text-align: left;
+  margin-left: 100px;
 }
 
 .Slider {
