--- a/src/components/Ingredients/Ingredients.css
+++ b/src/components/Ingredients/Ingredients.css
@@ -1,13 +1,31 @@
 .Ingredients {
+  margin-top: 100px;
 }
 
 .ingredient-title {
   text-align: left;
-  margin-left: 200px;
+  margin-left: 150px;
   text-decoration: underline;
+  border-left: 5px solid #bf0000;
+  color: #bf0000;
+}
+
+.ingredient-title :hover {
+  color: white;
+  text-decoration: none;
 }
 
 .Ingredients p {
   text-align: left;
-  margin-left: 200px;
+  margin-left: 150px;
+}
+
+.forms {
+  background-color: #ffffff;
+  margin: 50px 0px 0px 0px;
+  padding: 50px 0px 50px 0px;
+}
+
+.forms-tables {
+  margin: 50px 150px 0px 150px;
 }
