--- a/src/components/Suggestion/Suggestion.css
+++ b/src/components/Suggestion/Suggestion.css
@@ -1,14 +1,15 @@
 .Suggestion {
-  margin: 70px auto;
+  margin: 50px auto;
 }
 
 .suggestion-title {
   text-align: left;
-  margin-left: 100px;
+  margin-left: 150px;
   text-decoration: underline;
-  /* border-left: 5px solid white; */
+  border-left: 5px solid #bf0000;
   color: #bf0000;
 }
+
 .suggestion-title:hover {
   color: white;
   text-decoration: none;
@@ -16,10 +17,11 @@
 
 .Suggestion p {
   text-align: left;
-  margin-left: 100px;
+  margin-left: 150px;
 }
 
 .Slider {
+  margin: 30px 150px 0px 150px;
 }
 
 .meal-one,
@@ -27,7 +29,34 @@
 .meal-three,
 .meal-four,
 .meal-five,
-.meal-six {
-  padding-right: 50px;
+/* .meal-six, */
+.meal-seven,
+.meal-eight,
+.meal-nine,
+.meal-ten,
+.meal-eleven,
+.meal-twelve,
+.meal-thirteen,
+.meal-fourteen,
+.meal-fifteen,
+.meal-sixteen {
+  margin: 0px 30px 0px 30px;
+}
+
+.button-one,
+.button-two {
+  margin-top: 40px;
+  border-radius: 7px;
+  background-color: #bf0000;
+  color: white;
+  cursor: pointer;
+}
+
+.button-one {
+  margin-right: 5px;
+}
+
+.button-two {
+  margin-left: 5px;
 }
 /* This margin is not working. Need to find out how to make it work! */
