--- a/src/components/Suggestion/Suggestion.css
+++ b/src/components/Suggestion/Suggestion.css
@@ -24,12 +24,12 @@
   margin: 30px 150px 0px 150px;
 }
 
-.meal-one,
+/* .meal-one, */
 .meal-two,
 .meal-three,
 .meal-four,
-.meal-five,
-/* .meal-six, */
+/* .meal-five, */
+.meal-six,
 .meal-seven,
 .meal-eight,
 .meal-nine,
@@ -42,6 +42,16 @@
 .meal-sixteen {
   margin: 0px 30px 0px 30px;
 }
+
+/* .meal-two {
+  margin: 0px 50px 0px 30px;
+  padding-right: 30px;
+}
+
+.meal-eight {
+  margin: 0px 0px 0px 30px;
+  padding-left: 30px;
+} */
 
 .button-one,
 .button-two {
