trying to find out scrollable route

--- a/src/components/Suggestion/Suggestion.css
+++ b/src/components/Suggestion/Suggestion.css
@@ -25,33 +25,70 @@
 }
 
 /* .meal-one, */
-.meal-two,
+/* .meal-two,
 .meal-three,
-.meal-four,
+.meal-four, */
 /* .meal-five, */
-.meal-six,
-.meal-seven,
+/* .meal-six,
+.meal-seven, */
 .meal-eight,
 .meal-nine,
 .meal-ten,
 .meal-eleven,
 .meal-twelve,
-.meal-thirteen,
-.meal-fourteen,
-.meal-fifteen,
-.meal-sixteen {
+/* .meal-thirteen,
+.meal-fourteen, */
+.meal-fifteen {
   margin: 0px 30px 0px 30px;
 }
 
-/* .meal-two {
-  margin: 0px 50px 0px 30px;
-  padding-right: 30px;
+.meal-eight::before,
+.meal-nine::before,
+.meal-ten::before,
+.meal-eleven::before,
+.meal-twelve::before,
+.meal-fifteen::before {
+  position: absolute;
+  top: 0;
+  left: -75%;
+  z-index: 2;
+  display: block;
+  content: "";
+  width: 50%;
+  height: 100%;
+  background: -webkit-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  -webkit-transform: skewX(-25deg);
+  transform: skewX(-25deg);
 }
 
-.meal-eight {
-  margin: 0px 0px 0px 30px;
-  padding-left: 30px;
-} */
+.meal-eight:hover::before,
+.meal-nine:hover::before,
+.meal-ten:hover::before,
+.meal-eleven:hover::before,
+.meal-twelve:hover::before,
+.meal-fifteen:hover::before {
+  -webkit-animation: shine 0.75s;
+  animation: shine 0.75s;
+}
+@-webkit-keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
+@keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
 
 .button-one,
 .button-two {
@@ -69,4 +106,6 @@
 .button-two {
   margin-left: 5px;
 }
-/* This margin is not working. Need to find out how to make it work! */
+
+/* Learned about the image shine effect from this site:
+https://codepen.io/nxworld/pen/ZYNOBZ */
