--- a/src/components/Plan/Plan.css
+++ b/src/components/Plan/Plan.css
@@ -6,8 +6,8 @@
   text-align: left;
   margin-left: 150px;
   text-decoration: underline;
-  border-left: 5px solid #bf0000;
-  color: #bf0000;
+  border-left: 5px solid #ff4136;
+  color: #ff4136;
 }
 
 .plan-title :hover {
